--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
+    "react-toastify": "^11.0.5",
     "sweetalert2": "^11.21.0"
   },
   "devDependencies": {
